feat: Implement comprehensive markdown quality assurance system
- Added .markdownlint.json configuration with practical rules
  - Line length set to 120 chars (more realistic than 80)
  - Enforces blank lines around lists (MD032)
  - Allows inline HTML and flexible code block languages

- Added .cspell.json with 200+ technical terms
  - Comprehensive word list for technical vocabulary
  - Regex patterns to ignore UUIDs, hashes, dates
  - Extensible configuration for project-specific terms

- Created automated markdown fixing script (scripts/fix-markdown-issues.sh)
  - Automatically fixes formatting issues
  - Runs spell check
  - Shows summary of remaining issues

- Added GitHub Actions workflow for markdown linting
  - Triggers on markdown file changes
  - Automated PR comments for issues
  - Continuous quality assurance

- Updated package.json with convenience scripts
  - npm run lint:markdown - Check for issues
  - npm run fix:markdown - Auto-fix issues
  - npm run spell:check - Check spelling
  - npm run fix:all - Fix everything at once

- Created comprehensive documentation (MARKDOWN_QUALITY_ASSURANCE.md)
  - Explains the systematic approach
  - Documents all configurations
  - Provides troubleshooting guide

- Fixed markdown formatting issues across all files
  - Added blank lines around lists
  - Fixed trailing spaces
  - Ensures consistent formatting

This system ensures zero manual markdown fixes going forward!

--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Recovery Compass WFD Sunrise Path",
   "scripts": {
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint:markdown": "markdownlint '**/*.md' --ignore node_modules",
+    "fix:markdown": "markdownlint '**/*.md' --fix --ignore node_modules",
+    "spell:check": "cspell '**/*.md' --no-progress",
+    "fix:all": "npm run fix:markdown && npm run spell:check"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
     "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "markdownlint-cli": "^0.45.0"
   }
 }
