--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
+    "cspell": "^9.2.0",
+    "cspell-dict-npm": "^1.1.8",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "markdownlint-cli": "^0.45.0"
