--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,10 @@ repos:
         language: python
         pass_filenames: false
         always_run: true
+
+      - id: metrics-threshold
+        name: Check metrics thresholds
+        entry: python scripts/check_thresholds.py 0.90 60 HIGH
+        language: system
+        pass_filenames: false
+        always_run: true
