--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,12 @@ npm-debug.log*
 # Environment variables
 .env
 .env.local
+.env.secrets
+*.env.secrets
+
+# Docker
+.env.docker
+docker-compose.override.yml
 
 # Package lock files (optional - remove if you want to commit them)
 # package-lock.json
