--- a/recovery-compass-docker/docker-compose.minimal.yml
+++ b/recovery-compass-docker/docker-compose.minimal.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "6379:6379"
     healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-changeme}", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
