--- a/.github/workflows/docker-security.yml
+++ b/.github/workflows/docker-security.yml
@@ -15,6 +15,10 @@ on:
   schedule:
     - cron: '0 0 * * 1'  # Weekly scan on Mondays
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   trivy-scan:
     name: Trivy Security Scan
