feat(security): implement secrets management infrastructure
- Add comprehensive .gitignore patterns for sensitive files
- Exclude .env.secrets* files from version control
- Exclude data directories that may contain sensitive information
- Add patterns for temporary and log files
- Establish security-first approach to repository management

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ docker-compose.override.yml
 # Package lock files (optional - remove if you want to commit them)
 # package-lock.json
 # yarn.lock
+*.env.secrets*
+**/data/
+# Temporary files
+*.tmp
+*.log
