chore(core): Update core project files
- Update .gitignore with new patterns
- Update package.json dependencies
- Update .ai_context with new capabilities
- Modify pattern_collector.py for enhanced functionality

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ docker-compose.override.yml
 # Temporary files
 *.tmp
 *.log
+
+# Supervisor provenance keys and logs
+supervisor/.keys/
+supervisor/logs/snippets/*.json
