--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "version": "1.0.0",
   "dependencies": {
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "puppeteer": "^24.15.0"
   }
 }
