feat(cia): implement Phase 2 Day 2 - Observability & Security foundation
- Extend schema with metrics_port for Prometheus port allocation
- Add doc command for auto-generating component documentation
- Add exporters command for Prometheus exporter generation
- Create ASVS L2 Semgrep rules for security scanning
- Add security-scan.yml workflow with SARIF/HTML reports
- Document Day 2 completion with 60% observability, 40% security progress

Enables: automated docs, metrics exporters, security baseline

--- a/integrations/mcp-dashboard.yaml
+++ b/integrations/mcp-dashboard.yaml
@@ -20,5 +20,6 @@ dependencies:
   - component_id: mcp-launcher
     version: ^0.1.0
 metrics_namespace: mcp_dashboard
+metrics_port: 9101
 data_classification: internal
 status: development
