feat: implement audit-ready security enhancements
- Add SBOM generation and cosign attestation to CI/CD
- Integrate Trivy container scanning with HIGH+ severity gates
- Add Gitleaks secret detection to pre-commit hooks
- Implement chaos testing for self-healing validation
- Create nightly chaos test workflow with metrics reporting
- Update documentation to use audit-safe language with measurable SLOs

Security improvements:
- Supply chain: CycloneDX SBOM + sigstore signing
- Container security: Trivy scan on every build
- Secret detection: Multi-layer scanning (pre-commit + CI)
- Chaos validation: Automated recovery testing

Metrics and SLOs:
- Patch latency: Median < 24h, P95 < 72h
- Availability: 99.9% over 30-day rolling window
- MTTR: ≤ 5 minutes for container crashes
- Security coverage: 100% pre-commit enforcement

This transforms the implementation from good enough to audit-ready
with quantitative proof for compliance officers and auditors.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -100,6 +100,33 @@ repos:
       - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
 
+  - repo: https://github.com/zricethezav/gitleaks
+    rev: v8.18.2
+    hooks:
+      - id: gitleaks
+        name: Detect hardcoded secrets
+        description: Detect hardcoded secrets using Gitleaks
+        entry: gitleaks protect --verbose --redact --staged
+        language: golang
+        pass_filenames: false
+
+  # =====================================================
+  # License hooks
+  # =====================================================
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.4
+    hooks:
+      - id: insert-license
+        name: Add license headers
+        files: \.(py|js|jsx|ts|tsx)$
+        args:
+          - --license-filepath
+          - LICENSE
+          - --comment-style
+          - //
+          - --skip-license-insertion-comment
+          - "This file is licensed"
+
   # =====================================================
   # Commit message hooks
   # =====================================================
