--- a/.github/workflows/nightly-gem-scan.yml
+++ b/.github/workflows/nightly-gem-scan.yml
@@ -2,32 +2,27 @@ name: Nightly Hidden Gems Scan
 
 on:
   schedule:
-    # Run at 3:13 AM UTC every day
     - cron: "13 3 * * *"
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch:
+
+permissions:
+  contents: write             # grants push rights to default GITHUB_TOKEN
 
 jobs:
   gemscan:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history for commit scanning
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+          fetch-depth: 0
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
-      - name: Run hidden gems scanner
-        run: |
-          python scripts/scan_hidden_gems.py
-
+      - run: python scripts/scan_hidden_gems.py
       - name: Commit and push if changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions@users.noreply.github.com"
+          git config --local user.name  "github-actions"
           git add hidden_gems.context.md scripts/force_metrics.csv
-          git diff --quiet && git diff --staged --quiet || (git commit -m "🔍 Nightly gem scan: $(date +'%Y-%m-%d')" && git push)
+          git diff --quiet && git diff --staged --quiet || \
+          (git commit -m "Nightly gem scan $(date -u +'%Y-%m-%d')" && git push)
